add modified files

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         Made With <i class="fas fa-heart"></i> By Amro Elkeran © 2021
       </div>
       <div class="icon-social">
-        <a href="https://twitter.com/20uwk1911"><i class="fab fa-twitter-square"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100055974762885"><i class="fab fa-facebook-square"></i></a>
-        <a href="mailto:mrwalqyran@gmail.com"><i class="fab fa-google-plus-square"></i></a>
-        <a href=""><i class="fab fa-instagram-square"></i></a>
+        <a target="_blank" href="https://twitter.com/20uwk1911"><i class="fab fa-twitter-square"></i></a>
+        <a target="_blank" href="https://www.facebook.com/profile.php?id=100055974762885"><i class="fab fa-facebook-square"></i></a>
+        <a target="_blank" href="mailto:mrwalqyran@gmail.com"><i class="fab fa-google-plus-square"></i></a>
+        <a target="_blank" href="https://github.com/amro20"><i class="fa fa-github fa-fw fa-2x"></i></a>
       </div>
     </footer>
     <!-- End Footer -->
