--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <a target="_blank" href="https://twitter.com/20uwk1911"><i class="fab fa-twitter-square"></i></a>
         <a target="_blank" href="https://www.facebook.com/profile.php?id=100055974762885"><i class="fab fa-facebook-square"></i></a>
         <a target="_blank" href="mailto:mrwalqyran@gmail.com"><i class="fab fa-google-plus-square"></i></a>
-        <a target="_blank" href="https://github.com/amro20"><i class="fa fa-github fa-fw fa-2x"></i></a>
+        <a target="_blank" href="https://github.com/amro20"><i class="fab fa-github-square"></i></a>
       </div>
     </footer>
     <!-- End Footer -->
